added burger app

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <div class="card text-white bg-dark mb-2 curProj">
                                 <div class="card-body" id="currentProject">
                                     <h5 class="card-title">Current Project</h5>
-                                    <a href="https://github.com/MR-Stan/liri-node-app" target="_blank"
-                                        class="btn btn-info" id="clickButton">Click To See</a>
+                                    <a href="https://github.com/MR-Stan/Burger2" target="_blank" class="btn btn-info"
+                                        id="clickButton">Click To See</a>
                                 </div>
                             </div>
                         </div>
@@ -352,27 +352,24 @@
                                 </div>
                             </div>
 
-                            <!-- Star Wars RPG -->
+                            <!-- burger -->
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
+                                        <a href="https://damp-coast-89242.herokuapp.com/index" target="_blank">
                                             <img class="card-image-top embed-responsive-item"
-                                                src="assets/images/starwars.PNG" alt="Starwars RPG Screenshot">
+                                                src="assets/images/burger.PNG" alt="Burger App Screenshot">
                                         </a>
                                     </div>
                                     <div class="card-body project">
-                                        <h5 class="card-title projectLabel">StarWars RPG</h5>
-                                        <p class="card-text">This application is a click based, Star Wars themed
-                                            role
-                                            playing game (RPG). Select a hero to begin your journey and use
-                                            the force to defeat all enemies. It was created with HTML, CSS,
-                                            Javascript,
+                                        <h5 class="card-title projectLabel">Burger App</h5>
+                                        <p class="card-text">A Node, Express, Handlebars, and MySQL burger themed web
+                                            application that lets users input the names of burgers they'd like to eat...
                                             and
-                                            jQuery.</p>
+                                            then devour them.</p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="https://github.com/MR-Stan/unit-4-game" class="btn" target="_blank"><i
+                                        <a href="https://github.com/MR-Stan/burger" class="btn" target="_blank"><i
                                                 class="fab fa-github fa-2x"></i>
                                         </a>
                                     </div>
