added id's for each section, add code for chevron

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p class="card-text">Full Stack Web Developer</p>
         </a>
     </div>
+    <i class="chevron fat"></i>
 </div>
 
 
@@ -67,7 +68,7 @@
 <a id="about"></a>
 <br>
 <br>
-<div class="container-fluid content hide">
+<div class="container-fluid content hide" id="aboutSection">
     <div class="row">
         <!-- margin -->
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -113,7 +114,7 @@
 <a id="skills"></a>
 <br>
 <br>
-<div class="container-fluid content hide">
+<div class="container-fluid content hide" id="skillsSection">
     <div class="row">
         <!-- margin -->
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -267,7 +268,7 @@
     <a id="resume"></a>
     <br>
     <br>
-    <div class="container-fluid content hide">
+    <div class="container-fluid content hide" id="resumeSection">
         <div class="row">
             <!-- margin -->
             <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -308,7 +309,7 @@
     <a id="projects"></a>
     <br>
     <br>
-    <div class="container-fluid content hide">
+    <div class="container-fluid content hide" id="projectsSection">
         <div class="row">
             <!-- margin -->
             <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -495,7 +496,7 @@
     <a id="contact"></a>
     <br>
     <br>
-    <div class="container-fluid content hide">
+    <div class="container-fluid content hide contactSection">
         <div class="row">
             <!-- margin -->
             <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -558,7 +559,7 @@
     <!-- footer -->
     <footer class="page-footer bg-dark text-white hide">
         <div class="container text-center">
-            <small>&copy; 2019 Mike Stanley</small>
+            <small>&copy; 2020 Mike Stanley</small>
         </div>
     </footer>
 
