removed footer, updated links to jquery functions that hide all content and show corresponding section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-md fixed-top bg-dark content">
+<nav class="navbar navbar-expand-md fixed-top bg-dark">
     <a class="navbar-brand white" href="index.html">Mike Stanley</a>
     <a class="navbar-brand white" href="https://github.com/MR-Stan" target="_blank">
         <i class="fab fa-github"></i>
@@ -48,16 +48,16 @@
                 <a class="nav-link white" href="" id="aboutLink">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link white" href="">Skills</a>
+                <a class="nav-link white" href="" id="skillsLink">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link white" href="">Resume</a>
+                <a class="nav-link white" href="" id="resumeLink">Resume</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link white" href="">Projects</a>
+                <a class="nav-link white" href="" id="projectsLink">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link white" href="">Contact</a>
+                <a class="nav-link white" href="" id="contactLink">Contact</a>
             </li>
         </ul>
     </div>
@@ -480,7 +480,7 @@
 </div>
 
 <!-- contact -->
-<div class="container-fluid content contactSection">
+<div class="container-fluid content" id="contactSection">
     <div class="row">
         <!-- margin -->
         <div class="col-xs-0 col-sm-1 col-md-2"></div>
@@ -540,11 +540,11 @@
 </div>
 
 <!-- footer -->
-<footer class="page-footer bg-dark text-white hide">
+<!-- <footer class="page-footer bg-dark text-white hide">
     <div class="container text-center">
         <small>&copy; 2020 Mike Stanley</small>
     </div>
-</footer>
+</footer> -->
 
 <!-- font awesome -->
 <script src="https://kit.fontawesome.com/b70c89d96b.js" crossorigin="anonymous"></script>
